# daemon/src/api/types.ts
@@ -82,6 +82,9 @@ export type ImportPreviewSummaryDto = ApiDto<"ImportPreviewSummary">;
 export type ImportPreviewRowDto = ApiDto<"ImportPreviewRow">;
 export type ImportPreviewDto = ApiDto<"ImportPreview">;
 export type ImportPreviewResponseDto = ApiDto<"ImportPreviewResponse">;
+export type ImportResultSummaryDto = ApiDto<"ImportResultSummary">;
+export type ImportResultRowDto = ApiDto<"ImportResultRow">;
+export type ImportResultReportDto = ApiDto<"ImportResultReport">;
 export type TimelinePageDto = ApiDto<"TimelinePage">;
 export type SuggestionDto = ApiDto<"Suggestion">;
 export type SuggestionsResponseDto = ApiDto<"SuggestionsResponse">;
